# rlox

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  test.yml
benches/: rlox_bench.rs  scanner_bench.rs
examples/: closures.lox  fib.lox  lambda.lox  recursion.lox
librlox/: Cargo.toml
librlox/src/: lib.rs
librlox/src/ast/: expression.rs  mod.rs  parser.rs  statement.rs
librlox/src/environment/: hashmap.rs  mod.rs
librlox/src/interpreter/: interpreter.rs  mod.rs
librlox/src/object/: mod.rs
librlox/src/parser/: combinators.rs  expression.rs  expression_parser.rs  mod.rs  statement.rs  statement_parser.rs
librlox/src/scanner/: mod.rs  scanner.rs  source_scanner.rs
lox/: Cargo.toml
lox/src/: main.rs  tokens.rs
lox/src/scanner/: mod.rs
lox/src/tests/: mod.rs
src/: lib.rs  main.rs
src/analyzer/: mod.rs
src/analyzer/scope/: mod.rs
src/analyzer/scope_stack/: mod.rs  stack.rs
src/analyzer/tests/: mod.rs
src/ast/: expression.rs  mod.rs  statement.rs
src/ast/identifier/: mod.rs
src/ast/tests/: ast.rs
src/ast/token/: mod.rs  token.rs
src/class/: mod.rs
src/environment/: flat_env.rs  mod.rs
src/environment/tests/: mod.rs
src/errors/: mod.rs
src/functions/: mod.rs
src/functions/tests/: mod.rs
src/instance/: mod.rs
src/interpreter/: mod.rs  static_methods.rs
src/lexical_analyzer/: mod.rs
src/object/: mod.rs
src/parser/: expression_parser.rs  statement_parser.rs
src/pass/: mod.rs
src/scanner/: combinatorial_scanner.rs  mod.rs  source_scanner.rs
src/statics/: mod.rs
(+109 files in other folders)
