[package]
name = "rlox"
version = "0.1.0"
authors = ["Nate Catelli <ncatelli@packetfire.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "rlox_bench"
harness = false

[workspace]
members = ["librlox"]

[dependencies]
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v0.1.1" }
librlox = { path = "librlox" }